# flask-sample

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  Makefile  README.md  coverage.xml  pyproject.toml  renovate.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sh
.github/actions/setup-poetry/: action.yml
.github/workflows/: pre-commit.yml  test.yml
docker/: docker-compose.yml
docker/env_file/: env.app  env.mysql
docker/mysql/conf.d/: my.cnf
docker/mysql/data/: user.sql
docker/mysql/schema/: user.sql
sample/: __init__.py  api.py  cache.py  db.py  models.py  requirements.txt
src/: Dockerfile  uwsgi.ini
src/sample/: __init__.py  api.py  db.py  models.py
src/tests/: requirements.txt  test_api.py
tests/: conftest.py  docker-compose.yml  requirements.txt  test_api.py
