[tool.poetry]
name = "flask-sample"
version = "0.1.0"
description = ""
authors = ["Masato Naka <masatonaka1989@gmail.com>"]
readme = "README.md"
packages = [{include = "sample"}]

[tool.poetry.dependencies]
python = "^3.12"
attrs = "24.2.0"
coverage = "7.6.1"
freezegun = "1.5.1"
importlib-metadata = "8.5.0"
iniconfig = "2.0.0"
packaging = "24.1"
pluggy = "1.5.0"
pyparsing = "3.1.4"
python-dateutil = "2.9.0.post0"
six = "1.16.0"
toml = "0.10.2"
tomli = "2.0.1"
typing-extensions = "4.12.2"
uwsgi = "2.0.26"
zipp = "3.20.2"
flask = "^3.0.2"
pymysql = "^1.1.0"
flask-caching = "^2.1.0"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
attrs = "24.2.0"
freezegun = "1.5.1"
importlib-metadata = "8.5.0"
iniconfig = "2.0.0"
packaging = "24.1"
pluggy = "1.5.0"
pyparsing = "3.1.4"
pytest-cov = "5.0.0"
toml = "0.10.2"
typing-extensions = "4.12.2"
zipp = "3.20.2"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
