[tool.poetry]
name = "flask-sample"
version = "0.1.0"
description = ""
authors = ["Masato Naka <masatonaka1989@gmail.com>"]
readme = "README.md"
packages = [{include = "sample"}]

[tool.poetry.dependencies]
python = "^3.12"
attrs = "25.3.0"
coverage = "7.8.2"
freezegun = "1.5.2"
importlib-metadata = "8.7.0"
iniconfig = "2.1.0"
packaging = "25.0"
pluggy = "1.6.0"
pyparsing = "3.2.3"
python-dateutil = "2.9.0.post0"
six = "1.17.0"
toml = "0.10.2"
tomli = "2.2.1"
typing-extensions = "4.14.0"
uwsgi = "2.0.30"
zipp = "3.23.0"
flask = "^3.0.2"
pymysql = "^1.1.0"
flask-caching = "^2.1.0"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
attrs = "25.3.0"
freezegun = "1.5.2"
importlib-metadata = "8.7.0"
iniconfig = "2.1.0"
packaging = "25.0"
pluggy = "1.6.0"
pyparsing = "3.2.3"
pytest-cov = "6.1.1"
toml = "0.10.2"
typing-extensions = "4.14.0"
zipp = "3.23.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
